--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dayjs-business-time",
-  "version": "1.0.4",
+  "name": "@171h/dayjs-business-time",
+  "version": "1.0.5",
   "author": "Alexsander Lira",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -19,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/rankmyapp/dayjs-business-time.git"
+    "url": "https://github.com/171h/dayjs-business-time.git"
   },
   "scripts": {
     "test": "jest",
